// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests in <GiftExpertApp /> component should  show a list of categories 1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Marvel"
      key="Marvel"
    />
    <GifGrid
      category="DC"
      key="DC"
    />
  </ol>
</Fragment>
`;

exports[`tests in <GiftExpertApp /> component should show <GiftExpertApp /> component correctly  1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
